--- a/package.json
+++ b/package.json
@@ -2,13 +2,26 @@
   "name": "botwebsite",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next -p 8080",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/material": "^5.6.2",
+    "@mui/styles": "^5.6.2",
+    "@popperjs/core": "^2.11.5",
+    "classnames": "^2.3.1",
+    "material-ui": "^0.20.2",
     "next": "12.0.10",
+    "next-auth": "^4.2.1",
+    "pg": "^8.7.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
